fixed icon wrapping

--- a/style.css
+++ b/style.css
@@ -64,16 +64,33 @@ a {
 
 #skillcontainer {
     background-color: rgb(36, 36, 139);
+    padding-bottom:100px;
     font-size:100%;
 }
 
 #skillcontainer2 {
-    display: flex;
-    justify-content: center;
-    font-size:100%;
-    padding-bottom:50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    justify-items: center;
+    padding: 0;
+    margin: 0;
 }
+@media ( max-width: 600px) {
+    #skillcontainer2 {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      grid-row-gap: 120px;
+    }
+  }
+.skillcell {
+    color: rgb(238, 238, 238);
+    width: 200px;
+    height: 150px;
+    text-align: center;
+    font-size:100%; 
 
+}
 #skillheader {
     text-align: center;
     padding-top: 20px;
@@ -89,14 +106,6 @@ hr {
 }
 #projects{
     padding-top:15px;
-    margin-top:-22px;
     text-align:center;
     color: black;
-}
-.skillcell {
-    color: rgb(238, 238, 238);
-    width: 20%;
-    display: inline-block;
-    text-align: center;
-    font-size:100%; 
 }
